core/roboconf-core/src/test/resources/configurations/invalid/instanceof-imbricated-extra-char.instances
instance of vm {
	name: my-vm;
	instance of server { failed comment
		name: server1;
	}
}
